@@ -13,6 +13,7 @@ HEAD, planned as v0.16
 - Added tooltips showing the actual value of wires.
 - Added a shortcut S to split a single wire into two wires.
 - Added selectable number format to inputs and outputs.
+- Now can click in the k-map to modify the truth table.
 - Improved performance through more efficient decoupling of the GUI thread and the simulation thread.
 - Bug fixes
   - Fixed a bug in the RAMSinglePortSel component: Write was not edge-triggered on WE. Now it is.
